@@ -81,7 +81,8 @@
 - Added handle to move blocks in control panel and dashboard
 - Added brand new PDF certificates
 - Simplified advanced group properties (enterprise edition)
-- Fixed issue about iis 7.x and setting header Content-length in certificates creation
+- Fixed issue about IIS 7.x and setting header Content-length in certificates creation
+- Fixed job descriptions not assigning associated courses/lessons to all users (enterprise edition)
 
 === Version 3.6.6 8242 ===
 - Added users reports generator (enterprise/educational editions)
